Exercise01 - Added Cards Content

--- a/exercise-01/index.html
+++ b/exercise-01/index.html
@@ -1,3 +1,11 @@
+<!-- 
+    Exercise 01
+    Copy of an existing website with CSS
+    by Santiago Perez Gomez
+
+    Original Website:
+    https://developer.android.com/
+ -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -42,7 +50,7 @@
             </ul>
         </nav>
 
-        <div class="row">
+        <div class="row" id="title-background">
             <div class="column-1">
                 <h1>Android for Developers</h1>
                 <h3>Modern tools and resources to help you build experiences that people love, faster and easier, across every Android device.</h3>
@@ -52,6 +60,24 @@
             <div class="column-2">
                 <img src="./assets/img/android.png" alt="Android Icon" id="title-icon">
             </div>
+        </div>
+
+        <div class="row">
+            <div class="column-4"></div>
+
+            <div class="column-3 shadow-anim">
+                <img src="./assets/img/android.png" alt="Android Icon" class="icon"><b>Download Android Studio</b><img src="./assets/img/download.png" alt="Download Icon" class="icon-2">
+            </div>
+
+            <div class="column-3 shadow-anim">
+                <img src="./assets/img/gamepad.png" alt="Gamepad Icon" class="icon"><b>Launch Play Console</b><img src="./assets/img/open.png" alt="Open Link Icon" class="icon-2">
+            </div>
+
+            <div class="column-3 shadow-anim">
+                <img src="./assets/img/graduate.png" alt="Graduation Hat Icon" class="icon"><b>View Android Courses</b>
+            </div>
+
+            <div class="column-4"></div>
         </div>
     </body>
 </html>
