Exercise01 - Added New Cards

--- a/exercise-01/index.html
+++ b/exercise-01/index.html
@@ -50,34 +50,72 @@
             </ul>
         </nav>
 
-        <div class="row" id="title-background">
-            <div class="column-1">
+        <header class="row" id="title-background">
+            <section class="column-1">
                 <h1>Android for Developers</h1>
                 <h3>Modern tools and resources to help you build experiences that people love, faster and easier, across every Android device.</h3>
                 <input type="text" placeholder="Search" name="search">
-            </div>
+            </section>
 
-            <div class="column-2">
+            <section class="column-2">
                 <img src="./assets/img/android.png" alt="Android Icon" id="title-icon">
-            </div>
-        </div>
+            </section>
+        </header>
 
-        <div class="row">
-            <div class="column-4"></div>
+        <main>
+            <section class="row">
+                <div class="column-4"></div>
 
-            <div class="column-3 shadow-anim">
-                <img src="./assets/img/android.png" alt="Android Icon" class="icon"><b>Download Android Studio</b><img src="./assets/img/download.png" alt="Download Icon" class="icon-2">
-            </div>
+                <div class="column-3 shadow-anim card-blue card-center">
+                    <img src="./assets/img/android.png" alt="Android Icon" class="icon"><b>Download Android Studio</b><img src="./assets/img/download.png" alt="Download Icon" class="icon-2">
+                </div>
 
-            <div class="column-3 shadow-anim">
-                <img src="./assets/img/gamepad.png" alt="Gamepad Icon" class="icon"><b>Launch Play Console</b><img src="./assets/img/open.png" alt="Open Link Icon" class="icon-2">
-            </div>
+                <div class="column-3 shadow-anim card-blue card-center">
+                    <img src="./assets/img/gamepad.png" alt="Gamepad Icon" class="icon"><b>Launch Play Console</b><img src="./assets/img/open.png" alt="Open Link Icon" class="icon-2">
+                </div>
 
-            <div class="column-3 shadow-anim">
-                <img src="./assets/img/graduate.png" alt="Graduation Hat Icon" class="icon"><b>View Android Courses</b>
-            </div>
+                <div class="column-3 shadow-anim card-blue card-center">
+                    <img src="./assets/img/graduate.png" alt="Graduation Hat Icon" class="icon"><b>View Android Courses</b>
+                </div>
 
-            <div class="column-4"></div>
-        </div>
+                <div class="column-4"></div>
+            </section>
+
+            <section class="row">
+                <div class="column-4"></div>
+
+                <div class="column-5 shadow-anim card-black card-big">
+                    <section class="row">
+                        <div>
+                            <h6>FEATURED</h6>
+                            <h3>Bring natural conversational interactions into your Android apps</h3>
+                            <p>Integrate Google Assistant into your Android applications and bring natural voice interactions into your apps using familiar Android development tools.</p>
+                            <button class="button-white">Learn More</button>
+                        </div>
+            
+                        <div>
+                            <img src="./assets/img/colors.png" alt="Circles Icon" class="card-img">
+                        </div>
+                    </section>
+                </div>
+
+                <div class="column-5 shadow-anim card-blue card-big">
+                    <section class="row">
+                        <div>
+                            <h6>FEATURED</h6>
+                            <h3>Google I/O is back on May 10</h3>
+                            <p>You can catch the latest Android development announcements at this year's Google I/O.</p>
+                            <button class="button-black">Learn More</button>
+                        </div>
+            
+                        <div>
+                            <img src="./assets/img/google.png" alt="Google IO Icon" class="card-img">
+                        </div>
+                    </section>
+                </div>
+
+                <div class="column-4"></div>
+            </section>
+        </main>
     </body>
 </html>
